# classes_table

./: .gitignore  README.md  main.py  pyproject.toml  temp_class.csv  test.csv  test_b.csv  text.txt
csv_data/: products.csv  users.csv
db/: block_schedule.csv  class_all.csv  class_inf.csv  class_schedule.csv  class_schedule_bkp.csv  loc_inf.csv
src/: main.py  out_table.py
src/classtable/: data.py  data_deal.py  out_table.py  parse_args.py
tests/: test_unit_main.py
tests/base_files/: out_table_1.csv  out_table_2.csv
