[project]
name = "classes-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]


[project.scripts]
out_table = 'classtable.out_table:run'
data_deal = 'classtable.data_deal:run'
data_ck = 'classtable.data:run'

[tool.uv]
package = true


